@@ -12,5 +12,3 @@ website/index.txt
 website/javascripts/rounded_corners_lite.inc.js
 website/stylesheets/screen.css
 website/template.rhtml
-
-
