@@ -48,7 +48,7 @@ hoe = Hoe.new(GEM_NAME, VERS) do |p|
   p.clean_globs = CLEAN  #An array of file patterns to delete on clean.
   
   # == Optional
-  p.changes = p.paragraphs_of("History.txt", 0..1).join("\n\n")
+  p.changes = p.paragraphs_of("History.txt", 0..1).join("\\n\\n")
   #p.extra_deps = []     # An array of rubygem dependencies [name, version], e.g. [ ['active_support', '>= 1.3.1'] ]
   #p.spec_extras = {}    # A hash of extra values to set in the gemspec.
 end
@@ -66,6 +66,7 @@ task :website_upload do
   config = YAML.load(File.read(File.expand_path("~/.rubyforge/user-config.yml")))
   host = "\#{config["username"]}@rubyforge.org"
   remote_dir = "/var/www/gforge-projects/\#{RUBYFORGE_PROJECT}/"
+  # remote_dir = "/var/www/gforge-projects/\#{RUBYFORGE_PROJECT}/#{GEM_NAME}"
   local_dir = 'website'
   sh %{rsync -av \#{local_dir}/ \#{host}:\#{remote_dir}}
 end
